Se agrega logo de google al primer slide

--- a/index.html
+++ b/index.html
@@ -453,8 +453,9 @@ cursor: pointer;
                     <img src="Assets/icono.png" alt="" class="logo-titulo">
                     <h2 class="titulo-slider">POWER<span id="span-title">GYM</span></h2>
                 </div>
-                <div class="pre-title">
-                    <h4 id="pre-title">RESEÑAS</h4>
+                <div class="google">
+                    <p class="google">powered by</p>
+                    <img src="assets/google-logo-1.png" id="google">
                 </div>
                 <div class="stars">
                     <i class="fa-solid fa-star fa-beat fa-lg" style="color: #ea980b;"></i>
@@ -476,9 +477,7 @@ cursor: pointer;
                     <img src="Assets/icono.png" alt="" class="logo-titulo">
                     <h2 class="titulo-slider">POWER<span id="span-title">GYM</span></h2>
                 </div>
-                <div class="pre-title">
-                    <h4 id="pre-title">RESEÑAS</h4>
-                </div>
+
                 <div class="stars">
                     <i class="fa-solid fa-star fa-beat fa-lg" style="color: #ea980b;"></i>
                     <i class="fa-solid fa-star fa-beat fa-lg" style="color: #ea980b;"></i>
@@ -498,9 +497,7 @@ cursor: pointer;
                     <img src="Assets/icono.png" alt="" class="logo-titulo">
                     <h2 class="titulo-slider">POWER<span id="span-title">GYM</span></h2>
                 </div>
-                <div class="pre-title">
-                    <h4 id="pre-title">RESEÑAS</h4>
-                </div>
+
                 <div class="stars">
                     <i class="fa-solid fa-star fa-beat fa-lg" style="color: #ea980b;"></i>
                     <i class="fa-solid fa-star fa-beat fa-lg" style="color: #ea980b;"></i>
@@ -520,9 +517,7 @@ cursor: pointer;
                     <img src="Assets/icono.png" alt="" class="logo-titulo">
                     <h2 class="titulo-slider">POWER<span id="span-title">GYM</span></h2>
                 </div>
-                <div class="pre-title">
-                    <h4 id="pre-title">RESEÑAS</h4>
-                </div>
+
                 <div class="stars">
                     <i class="fa-solid fa-star fa-beat fa-lg" style="color: #ea980b;"></i>
                     <i class="fa-solid fa-star fa-beat fa-lg" style="color: #ea980b;"></i>
